nav bar active class added to the current page nav link

--- a/views/includes/nav.ejs
+++ b/views/includes/nav.ejs
@@ -2,10 +2,10 @@
     <nav>
       <ul>
         <li>
-          <a href="/shop">Shop</a>
+          <a href="/shop" class="<%= link==='/shop'? 'active' : '' %>" >Shop</a>
         </li>
         <li>
-          <a href="/admin/add-product">Add Product</a>
+          <a href="/admin/add-product" class="<%= link==='/admin/add-product'? 'active' : '' %>">Add Product</a>
         </li>
       </ul>
     </nav>
