--- a/views/shop.ejs
+++ b/views/shop.ejs
@@ -1,30 +1,23 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta
-      name="description"
-      content="Discover books by A.N. Author, illustrated by P. Picture. Explore our category of books, starting at just $17.99, featuring works with up to 784 pages!"
-    />
-    <title><%= docTitle %></title>
-    <link rel="stylesheet" href="/styles/main.css" />
+<%- include('includes/head.ejs') %>
+    <link rel="stylesheet" href="/styles/shop.css" />
   </head>
   <body>
-    <header>
-      <nav>
-        <ul>
-          <li>
-            <a href="/shop">Shop</a>
-          </li>
-          <li>
-            <a href="/admin/add-product">Add Product</a>
-          </li>
-        </ul>
-      </nav>
-    </header>
+    <%- include('includes/nav.ejs') %>
     <main>
-      <p>No Product Found</p>
-    </main>
-  </body>
-</html>
+      <div class="cards">
+        <% if (props.length > 0) { %> <% props.forEach((product) => { %>
+        <article class="card">
+          <img
+            src="/images/book.avif"
+            alt="A stack of Geography books"
+            class="card_img"
+          />
+          <h3 class="card_title"><%= product.name %></h3>
+          <p class="card_description"><%= product.description %></p>
+          <button type="button" class="card_button">Add to cart</button>
+        </article>
+        <% }) %> <% } else { %>
+        <p>No books found.</p>
+        <% } %>
+      </div>
+    <%- include('includes/end.ejs') %>
